fix(lsp): Folding range editor NPE